--- a/src/components/Loader.css
+++ b/src/components/Loader.css
@@ -9,7 +9,7 @@
   justify-content: center;
   align-items: center;
   z-index: 9999;
-  animation: fadeOut 0.5s ease-in-out 1.5s forwards;
+  animation: fadeOut 0.5s ease-in-out 1.8s forwards;
 }
 
 .spinner {
@@ -44,5 +44,22 @@
   to {
     opacity: 0;
     visibility: hidden;
+  }
+}
+
+.hidden-content {
+  opacity: 0;
+}
+
+.fade-in-content {
+  animation: fadeInContent 0.8s ease-in forwards;
+}
+
+@keyframes fadeInContent {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
   }
 }
